# simpleHTTP

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  simpleHTTP
__tests__/: CMakeLists.txt  Testing.cpp
__tests__/http/: CMakeLists.txt  parsing.tests.cpp
includes/configuration/: config.hpp
includes/http/: http.types.hpp  parsing.hpp  respond.hpp  response.hpp
includes/http/lexer/: lexer.hpp  token.hpp  trie.hpp
includes/http/types/: header.types.hpp  http.types.hpp  request.hpp  status.types.hpp
includes/logging/: logging.hpp
includes/pages/: page_cache.hpp  page_content.hpp  page_manager.hpp  page_manager_config.hpp  page_map.hpp
includes/routing/: router.hpp  router.types.hpp
includes/server/: events.hpp  server.types.hpp  server_config.hpp  shttp_Server.hpp
includes/socket/: socket.hpp  socket.types.hpp
includes/types/: data.types.hpp
includes/util/: class_types.hpp  file_operations.hpp  string_view_manipulations.hpp
src/: CMakeLists.txt  simpleHTTP.cpp
src/http/: CMakeLists.txt  parsing.cpp  respond.cpp  response.cpp
src/http/lexer/: lexer.cpp
src/http/types/: header.types.cpp  status.types.cpp
src/pages/: CMakeLists.txt  page_content.cpp  page_manager.cpp
src/routing/: CMakeLists.txt  router.cpp
src/server/: CMakeLists.txt  shttp_Server.cpp
src/socket/: CMakeLists.txt  socket.cpp
src/util/: CMakeLists.txt  file_operations.cpp  string_view_manipulations.cpp
